--- a/GifMaker/Base.lproj/LaunchScreen.xib
+++ b/GifMaker/Base.lproj/LaunchScreen.xib
@@ -13,7 +13,7 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="5MA-fd-NIe">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splashLogo" translatesAutoresizingMaskIntoConstraints="NO" id="5MA-fd-NIe">
                     <rect key="frame" x="157" y="398" width="100" height="100"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="100" id="IGL-R7-sTR"/>
@@ -21,7 +21,7 @@
                     </constraints>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" red="1" green="0.20000000000000001" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.92156862745098034" green="0.28627450980392155" blue="0.41176470588235292" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="5MA-fd-NIe" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="2TS-pN-7w0"/>
                 <constraint firstItem="5MA-fd-NIe" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Yzk-Xq-mex"/>
@@ -30,6 +30,6 @@
         </view>
     </objects>
     <resources>
-        <image name="logo" width="40" height="40"/>
+        <image name="splashLogo" width="74" height="74"/>
     </resources>
 </document>
