Adds PreviewViewControllerDelegate protocol to notify the SavedGifVC to save gif on create and save button tap.

--- a/GifMaker/Base.lproj/Main.storyboard
+++ b/GifMaker/Base.lproj/Main.storyboard
@@ -225,6 +225,9 @@
                                         <state key="normal" title="CREATE AND SAVE">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="createAndSave:" destination="cB7-Y1-ZFX" eventType="touchUpInside" id="ccH-Kg-FSx"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
